Fix issue with overflow when using a combination of nested hbox and vbox
See http://fantasai.inkedblade.net/style/discuss/flexbox-min-size/

--- a/flexit.css
+++ b/flexit.css
@@ -5,7 +5,7 @@
  */
 
 /* containers */
-.hbox, .vbox {display: -webkit-flex; display: flex}
+.hbox, .vbox {display: -webkit-flex; display: flex; min-height: 0}
 .hbox {-webkit-flex-direction: row; flex-direction: row}
 .vbox {-webkit-flex-direction: column; flex-direction: column}
 
